--- a/src/Components/css/App.css
+++ b/src/Components/css/App.css
@@ -39,3 +39,47 @@ footer
 .Links {
   list-style-type: none;
 }
+
+.form {
+  padding-left: 40px;
+}
+
+
+// buttons
+
+.button {
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.centre {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.menubutton {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #008CBA;
+  border-radius: 3px;
+}
+
+.menubutton:hover {
+  background-color: #008CBA;
+  color: white;
+}
+
+
+
