--- a/src/Components/css/App.css
+++ b/src/Components/css/App.css
@@ -16,7 +16,7 @@ footer
 }
 
 .App-logo {
-  height: 10vmin;
+  height: 6vmin;
   pointer-events: none;
   color: blue;
   display: inline;
@@ -72,14 +72,15 @@ footer
 .menubutton {
   background-color: white; 
   color: black; 
-  border: 2px solid #008CBA;
+  border: 2px solid #0ae7fc;
   border-radius: 3px;
 }
 
 .menubutton:hover {
-  background-color: #008CBA;
-  color: white;
+  background-color: black;
+  color: #0ae7fc;
 }
+
 
 
 
