--- a/src/App.css
+++ b/src/App.css
@@ -1,85 +1,175 @@
-/* .App {
-  text-align: center;
-} */
 
-header
+
+.header
 {
-  background-color: rgb(18, 234, 184);
-  color: rgb(0, 54, 80);
+  background-color: white;
   text-align: left;
+  margin-bottom: 0px;
 }
 
-footer
+.footer
 {
-  background-color: rgb(18, 234, 184);
-  color: rgb(0, 54, 80);
+  background-color: white;
   text-align: center;
+  height: 50px;
 }
 
-.signup{
-  padding: 20px;
-  line-height: 2.5;
+.content {
+  min-height: calc(100vh - 70px);
+}
+
+
+/* create 3 columns that float next to each other */
+.column {
+  float: left;
+  width: 33.3%
+}
+
+.left, .right {
+  width: 20%;
+}
+
+.middle {
+  width: 60%;
+}
+
+
+/* sign up page */
+ .signup{
+  line-height: 2;
 }
 
 .signup table {
-
-  width: 50%;
   font-size: 14px;
- 
+  width:100%;
+  table-layout: fixed;
+} 
+
+
+.signuparea td {
+  font-weight: bold;
 }
 
-.signup button {
-  background-color:skyblue;
+td {
+  width: 150px;
+  font-size: 14px;
+}
+td+td {
+  width: auto;
+}
+
+input[type=fname],input[type=lname],input[type=email], input[type=phone], input[type=date] {
+  width: 100%;
+  /*padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;*/
+}
+
+
+.signupbutton {
+  background-color:#0ae7fc;
   border-radius: 6px;
-  font-size: 16px;
+  font-size: 14px;
+  color:black;
+  border: 2px solid black;
+  border-radius: 4px;
  
 }
+.signupbutton:hover {
+  color:#0ae7fc;
+  background-color:black;
+  /*border: 2px solid #0ae7fc;*/
+}
 
+
+.signuparea {
+
+  width: 75%;
+  font-size: 14px;
+  border-radius: 4px;
+} 
 
 .App-logo {
-  height: 10vmin;
-  pointer-events: none;
-  color: blue;
-  display: inline;
+ height:40px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #646c7a;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: blue;
-}
 
 .App-link {
   color: #61dafb;
 }
 
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-.button {
-  font: bold 11px Arial;
-  text-decoration: none;
-  background-color: #EEEEEE;
-  color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
+
+.PageContent {
+  background-color: white;
 }
+
+.Links {
+  list-style-type: none;
+  padding: 0;
+}
+
+.button {
+  border: none;
+  color: white;
+  padding: 4px 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+
+.menubutton {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #0ae7fc;
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+.menubutton:hover {
+  background-color: black;
+  color: #0ae7fc;
+  font-weight: bold;
+}
+
+
+#scheduletable {
+  border-collapse: collapse;
+  width:100%;
+  table-layout:fixed;
+}
+#scheduletable td{
+  width: 500px;
+  border: 1px solid black;
+  padding: 8px;
+}
+
+#scheduletable th {
+  border: 1px solid  black;
+  padding: 8px;
+}
+
+#scheduletable td+td {
+  width: auto
+}
+
+#scheduletable tr:nth-child(even){background-color: #f2f2f2;}
+
+/*#scheduletable tr:hover {background-color: #ddd;}*/
+
+#scheduletable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #0ae7fc;
+  color: black;
+
+}
+
+
