under 18 check added and cinema times changed a bit

--- a/src/App.css
+++ b/src/App.css
@@ -143,6 +143,7 @@ input[type=fname],input[type=lname],input[type=email], input[type=phone], input[
   border-collapse: collapse;
   width:100%;
   table-layout:fixed;
+  overflow:scroll;
 }
 #scheduletable td{
   width: 500px;
